--- a/HomeMates/VIew/Profile/TotalPointsTableViewCell.xib
+++ b/HomeMates/VIew/Profile/TotalPointsTableViewCell.xib
@@ -30,25 +30,25 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="積分放在這" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lev-3D-Ys5">
-                        <rect key="frame" x="64" y="42" width="144" height="48"/>
+                        <rect key="frame" x="64" y="42" width="144" height="14"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50 點" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQe-pj-RJS">
-                        <rect key="frame" x="313" y="57" width="67" height="33"/>
+                        <rect key="frame" x="313" y="23" width="67" height="33"/>
                         <fontDescription key="fontDescription" type="system" pointSize="27"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile_48px" translatesAutoresizingMaskIntoConstraints="NO" id="Sct-Cz-GZ3">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DoneTask_36px" translatesAutoresizingMaskIntoConstraints="NO" id="Sct-Cz-GZ3">
                         <rect key="frame" x="16" y="0.0" width="36" height="116.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="36" id="Qki-aS-3fM"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="累計積分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lo-v3-gHg">
-                        <rect key="frame" x="236" y="72" width="62" height="18"/>
+                        <rect key="frame" x="236" y="38" width="62" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="eb9-5w-eGA"/>
                         </constraints>
@@ -86,7 +86,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Profile_48px" width="16" height="16"/>
+        <image name="DoneTask_36px" width="36" height="36"/>
         <namedColor name="Y4">
             <color red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
